Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.9.0.3 - 1/23/2014 - Jonathan Cowher
----------------------------------------------------------------------
- Fixed a bug with product filters some times redirecting to a 404 page or returning the wrong product set
- Fixed a bug when calling mp_list_products() with no arguments, the default set of arguments would be populated incorrectly

2.9.0.2 - 1/23/2014 - Jonathan Cowher
----------------------------------------------------------------------
- Fixed a bug where product listings would use default posts per page setting instead of the value in MarketPress presentation settings

2.9.0.1 - 1/23/2014 - Jonathan Cowher
----------------------------------------------------------------------
- Fixed a bug where users couldn't update products/order after updating

2.9 - 1/22/2014 - Aaron Edwards, Arnold, Marko Miljus, Ryan Welcher, Jonathan Cowher
----------------------------------------------------------------------
- Added Coupons for individual categories/products
- Added compatibility with Google Universal Analytics
- Added Stripe embedded form button
- Added Pinterest "Rich Pins" w/advanced oembed endpoint 
- Added show related products option
- Added Pickup in-store shipping option
- Added ability to assign a custom per-order limit to a product
- Add setting to turn off downloadable product default 1 per order limit
- Added filters to many template functions
- Minor bugfixes on Simplify gateway
- Deleted orders are now removed from usermeta
- Fixed bug with 2checkout where amount was returning more than 2 decimal places
- Added Russian Rubles to paypal currencies and locale
- Fix php warnings when switching between non-calculated shipping modules
- Fix bug with which gateway is shown when switching global cart in network settings