@@ -5,6 +5,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fix: Genesis theme compatibility update for >2.0
+
 2.9.0.3 - 1/23/2014 - Jonathan Cowher
 ----------------------------------------------------------------------
 - Fixed a bug with product filters some times redirecting to a 404 page or returning the wrong product set
